--- a/card.html
+++ b/card.html
@@ -19,6 +19,8 @@
             <button onclick="searchButton()" class="btn btn-outline-success" type="submit">Search</button>
         </div>
         <h2 id="error" class="text-danger text-center"></h2>
+
+        <div id="main" class="row"></div>
     </div>
 
     <script src="card.js"></script>
